| Style | Fix spacing of first child element in blog (#94)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,6 @@ h1 {
 .prose > :first-child {
     /* Override removing top margin, causing layout shift */
     margin-top: 1.25em !important;
-    margin-bottom: 1.25em !important;
 }
 
 pre::-webkit-scrollbar {
